Fix #2450 screenshot API uses special crop in display GUI slot Fix #2446 Plugin base64 icons are rendered at the wrong size

--- a/css/dialogs.css
+++ b/css/dialogs.css
@@ -1308,6 +1308,10 @@
 		margin-top: 8px;
 		display: inline-block;
 	}
+	.plugin_icon_area img.icon {
+		height: auto;
+		margin-top: 0;
+	}
 	.plugin_icon_area img {
 		border-radius: 8px;
 		pointer-events: none;
